Fri Jun 29 19:26:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/TCP/tcp_test.cpp:
        * tests/Message_Queue_Test.cpp:
          Updated includes

Fri Jun 29 18:39:46 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/depgen.pl:

          Load modules from $MPC_ROOT/modules since the NMake dependency
          generator now uses some functions from MPC.

Fri Jun 29 13:38:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Stats.{h,cpp,inl}:
        * ace/Throughput_Stats.{h,cpp}:
          Moved ACE_Throughput_Stats to its own file, fixes bugzilla bug
          2969

        * ace/ace.mpc:
        * ace/Makefile.am:
          Added new files

Fri Jun 29 12:04:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Message_Queue.{h,cpp,inl}:
        * ace/Message_Queue_Vx.{h,cpp,inl}:
          Moved ACE_Message_Queue_Vx to its own file, fixes bugzilla bug
          2970

        * ace/ace.mpc:
        * ace/Makefile.am:
          Added new files

Fri Jun 29 11:16:06 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/CDR_Stream.h:
        * ace/CDR_Stream.cpp:

          Reversed the order of declaration and implementation for
          overloads of ostream operator for from_octet and from_wchar.
          The former calls the latter, and some compilers seem to
          require that the latter's full implementation be seen
          before it can be called.

Fri Jun 29 11:03:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_mingw32.GNU:
          Set PLATFORM_SSL_LIBS. Thanks to Andy Wang
          <ypwangandy at gmail dot com> for reporting this

Fri Jun 29 10:59:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added new Bug_2953_Regression

Fri Jun 29 09:48:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_arpa_inet.cpp:
          Fix for VxWorks 6.5
